# blend

./: .users  Cargo.toml  README.md  build.sh  flake.nix  project_spec.txt
frontend/: Cargo.toml
frontend/frontend/: index.html
frontend/src/: app.rs  lib.rs
frontend/src/components/: chat.rs  header.rs  kanban.rs  log_drawer.rs  mod.rs  release_card.rs  release_form.rs
frontend/src/models/: mod.rs
frontend/src/services/: api.rs  websocket.rs
scripts/: deploy_app.sh  deploy_data.sh  deploy_solr.sh
src/: main.rs
src/api/: clients.rs  mod.rs  releases.rs  users.rs
src/auth/: github.rs  mod.rs  users_file.rs  users_file_embed.rs
src/models/: client.rs  mod.rs  release.rs  user.rs
src/scheduler/: mod.rs
src/storage/: mod.rs  sled_storage.rs
src/websocket/: mod.rs  server.rs
